# ball-sort-puzzle-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  color.py  image.py  justfile  main.py  pyproject.toml
.github/workflows/: main.yml
app/: client.py  image.py  main.py  requirements.txt  settings.py  solver.py
app/modules/: ball.py  color.py  flask.py  move.py
app/tests/: test_ball_sort_puzzle.py  test_image_recognition.py
modules/: __init__.py  ball.py  color.py  flask.py  move.py
tests/: test_ball_sort_puzzle.py  test_image_recognition.py
