[tool.poetry]
name = "ball-sort-puzzle"
version = "0.1.0"
description = "Solver for mobile game \"Ball sort puzzle\" on Python."
authors = ["Vyazovetskov Vladimir <erhosen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
opencv-python-headless = "^4.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
