[tool.poetry]
name = "ball-sort-puzzle-bot"
version = "0.2.0"
description = "Telegram bot, that solves Ball Sort Puzzle mobile game."
authors = ["Viazovetskov Vladimir <erhosen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.0"
opencv-python-headless = "^4.4.0"
requests = "^2.25.0"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
